@@ -12,11 +12,3 @@ ifneq ($(filter powerpc powerpcspe ppc64,$(DEB_HOST_ARCH)),)
 endif
 
 include $(top_rulesdir)/Makefile.inc
-
-# Build userland headers first
-unexport VERSION
-all-local:
-	mkdir -p headers-tools
-	$(MAKE) -C $(top_srcdir) ARCH=$(KERNEL_ARCH) O=$(CURDIR)/headers-tools \
-		INSTALL_HDR_PATH=$(CURDIR) headers_install
-all-recursive: all-local
