@@ -1,9 +1,14 @@
 linux (4.19.16-2) UNRELEASED; urgency=medium
 
+  [ Luca Boccassi ]
   * Do not generate linux-source-$ver stanza in debian/control if
     source is set to disabled in debian/config/defines.
   * linux-perf: explicitly disable the jvmti feature and shared library.
   * Document pkg.linux.nosource in debian/README.source.
+
+  [ Ben Hutchings ]
+  * debian/rules.d, debian/rules.real: Restore build of userland headers for
+    tools
 
  -- Luca Boccassi <bluca@debian.org>  Fri, 18 Jan 2019 19:09:06 +0000
 
